fix(catalog) change color of category match counts to increase contrast

--- a/workspaces/default/themes/base/assets/styles/site.css
+++ b/workspaces/default/themes/base/assets/styles/site.css
@@ -442,7 +442,7 @@ a.tag-link .tag-link--name {
 
 a.tag-link .tag-link--count {
   float: right;
-  color: #888;
+  color: #666;
 }
 
 a.tag-link.is-active .tag-link--count {
